#############################
qicseek - v0.9

* Updated formula for awesome NDCG
* secretingredient.txt for realtime ranking formula modification

-- Sivabalan Thirunavukkarasu - Mar 16, 2014 - 00:15

#############################
qicseek - v0.8

* Fixes for Firefox browser

-- Sivabalan Thirunavukkarasu - Mar 14, 2014 - 15:04

#############################
qicseek - v0.7

* Replacing https with http in google results
* Adding/stripping trailing slash in google results for ndcg
* NDCG @ 10

-- Sivabalan Thirunavukkarasu - Mar 14, 2014 - 12:06

#############################
qicseek - v0.6

* Search metrics UI
* Search results animation
* NDCG calculation for preset terms
* Added favicon
* Avoiding vcp.ics results

-- Sivabalan Thirunavukkarasu - Mar 14, 2014 - 02:58

#############################
qicseek - v0.5

* New ranking functions
	* Using position within document for reference
* Syncing scripts
* changed sort from 2 levels to one level -> log10(tfidf * pr / log10(1 + docdiff) * cosinescore ^ 2) seems to be better. Made that secret sauce.

-- Rohan Achar - Mar 13, 2014 - 22:40

#############################
qicseek - v0.4

* Updating the index with new index
* Syncing scripts

-- Sivabalan Thirunavukkarasu - Mar 13, 2014 - 14:58

#############################
qicseek - v0.3

* Updated UI
* Added search rank type select option

-- Sivabalan Thirunavukkarasu - Mar 13, 2014 - 14:58

#############################
qicseek - v0.2

* Cleaning up index
* Adding pre-built scripts for anchorText, pageRank, indexBuilder

-- Rohan Achar - Mar 13, 2014 - 14:30

#############################
qicseek - v0.1

* Improved auto suggestion
	* Accept auto suggestion using tab/right arrow
	* Partial matches improved
* Ranking type can be sent via AJAX request 
	* Current Default: Cosine similarity 
* DocFetcher.py: Fixed order of resultsList (changed from dict to list of dicts)
* DocFetcher.py: Added Cosine similarity functions